--- a/lib/css/zenburn.css
+++ b/lib/css/zenburn.css
@@ -9,36 +9,36 @@ based on dark.css by Ivan Sagalaev
   display: block;
   overflow-x: auto;
   padding: 0.5em;
-  background: #3f3f3f;
-  color: #dcdcdc;
+  background: white;
+  color: #0d0d0c;
 }
 
 .hljs-keyword,
 .hljs-selector-tag,
 .hljs-tag {
-  color: #e3ceab;
+  color: #030e0b;
 }
 
 .hljs-template-tag {
-  color: #dcdcdc;
+  color: #0c0c0c;
 }
 
 .hljs-number {
-  color: #8cd0d3;
+  color: #0c0003;
 }
 
 .hljs-variable,
 .hljs-template-variable,
 .hljs-attribute {
-  color: #efdcbc;
+  color: #0f0c0c;
 }
 
 .hljs-literal {
-  color: #efefaf;
+  color: #0f0f0f;
 }
 
 .hljs-subst {
-  color: #8f8f8f;
+  color: #0f0f0f;
 }
 
 .hljs-title,
@@ -47,27 +47,27 @@ based on dark.css by Ivan Sagalaev
 .hljs-selector-class,
 .hljs-section,
 .hljs-type {
-  color: #efef8f;
+  color: #0f0f0f;
 }
 
 .hljs-symbol,
 .hljs-bullet,
 .hljs-link {
-  color: #dca3a3;
+  color: #0c0303;
 }
 
 .hljs-deletion,
 .hljs-string,
 .hljs-built_in,
 .hljs-builtin-name {
-  color: #cc9393;
+  color: #0c0303;
 }
 
 .hljs-addition,
 .hljs-comment,
 .hljs-quote,
 .hljs-meta {
-  color: #7f9f7f;
+  color: #0f0f0f;
 }
 
 
