--- a/lib/css/zenburn.css
+++ b/lib/css/zenburn.css
@@ -11,6 +11,7 @@ based on dark.css by Ivan Sagalaev
   padding: 0.5em;
   background: white;
   color: #0d0d0c;
+  font-weight: bold;
 }
 
 .hljs-keyword,
